--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <meta charset="utf-8">
   <script src="https://www.gstatic.com/firebasejs/6.3.4/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
-  <script src="js/Form.js"></script>
-  <script src="js/Game.js"></script>
-  <script src="js/Player.js"></script>
+  <script src="Form.js"></script>
+  <script src="Game.js"></script>
+  <script src="Player.js"></script>
   <script src="./p5.play.js"></script>
 
 
